--- a/layouts/partials/blogger-status.html
+++ b/layouts/partials/blogger-status.html
@@ -1,10 +1,9 @@
-<div>
+<div style="margin-right: 1em;">
     <div>
-        <h3>博主今天摸鱼了吗？</h3>
+        <img src="https://ghchart.rshah.org/ff5566/pluveto" alt="Pluveto's Github chart" style="width: 100%;">
     </div>
     <div>
-        <div>
-            <img src="https://ghchart.rshah.org/ff5566/pluveto" alt="Pluveto's Github chart" />
-        </div>
+        <img src="https://github-readme-activity-graph.cyclic.app/graph?username=pluveto&amp;theme=minimal"
+            style="width: 100%;">
     </div>
 </div>
