--- a/layouts/partials/blogger-status.html
+++ b/layouts/partials/blogger-status.html
@@ -1,9 +1,14 @@
-<div style="margin-right: 1em;">
+<div>
     <div>
-        <img src="https://ghchart.rshah.org/ff5566/pluveto" alt="Pluveto's Github chart" style="width: 100%;">
+        <h3>博主今天摸鱼了吗？</h3>
     </div>
-    <div>
-        <img src="https://github-readme-activity-graph.cyclic.app/graph?username=pluveto&amp;theme=minimal"
-            style="width: 100%;">
+    <div style="margin-right: 1em;">
+        <div>
+            <img src="https://ghchart.rshah.org/ff5566/pluveto" alt="Pluveto's Github chart" style="width: 100%;">
+        </div>
+        <div>
+            <img src="https://github-readme-activity-graph.cyclic.app/graph?username=pluveto&amp;theme=minimal"
+                style="width: 100%;">
+        </div>
     </div>
 </div>
