--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,6 +117,7 @@ article h1 a {
 
 .row {
   display: flex;
+  flex-direction: row;
   margin-left: -0.5rem;
   margin-right: -0.5rem;
 }
@@ -251,11 +252,19 @@ pre {
 }
 
 table {
-
   width: 100%;
   overflow: scroll;
 }
 
 p img {
   max-width: -webkit-fill-available;
+}
+
+@media (max-width: 900px) {
+  .row {
+    flex-direction: column;
+  }
+  .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12 {
+    max-width: 100%;
+  }
 }
