--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -5,8 +5,8 @@
 		<h3>欢迎来访</h3>
 	</div>
 	<div>
-		<p>你好，欢迎来到<i>消灭幺蛾子！</i>，我是张梓靖（Pluveto）。愿望是能做自己喜欢的事。</p>
-		<b>兴趣领域：</b>
+		<p>你好，欢迎来到<i>消灭幺蛾子！</i>，我是张梓靖（世界语名：Pluveto）。愿望是能做自己喜欢的事。</p>
+		<b>兴趣领域</b>
 		<p>计算机方面，主要对<u>编译器</u>、<u>文件系统</u>、<u>区块链</u>、<u>分布式系统</u>，以及无所不在的<u>软件架构</u>有兴趣。学过一点前后端，学过一点 AI
 			。</p>
 		<p>由于选了 AI 专业，发现生活就是推公式和炼丹，感觉还是更喜欢开发，打算用业余时间学习更深入的知识。</p>
