--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,13 +1,28 @@
-<div>
-	<div>
-		<h3>最近发布</h3>
+<div class="row">
+	<div class="col-6">
+		<div>
+			<h3>最近发布</h3>
+		</div>
+		<div>
+			<p>要查看全部文章，请点击右上角“归档”</p>
+			<ul>
+				{{ range first 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
+				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a> <span class="tiny-note">({{ .Date.Format "2006/1/2" }})</span> </li>
+				{{ end }}
+			</ul>
+		</div>
 	</div>
-	<div>
-		<p>要查看全部文章，请点击右上角“归档”，下面是最近发布的几篇日志</p>
-		<ul>
-			{{ range first 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
-			<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-			{{ end }}
-		</ul>
+	<div class="col-6">
+		<div>
+			<h3>最受欢迎</h3>
+		</div>
+		<div>
+			<p>希望能给大家带来通俗易懂的内容</p>
+			<ul id="most-views">
+				{{ range first 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
+				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+				{{ end }}
+			</ul>
+		</div>
 	</div>
 </div>
