--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,8 +1,15 @@
 <article>
 	<time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "1/2, 2006" }}</time>
 	<h1><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
-	{{ range .Params.tags }}
-	<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
+	{{ with .Params.tags }}
+	<aside id="tags" class="flex items-center flex-1">
+		<div class="tag-label">Tags &nbsp;</div>
+		<ul class="tag-list">
+			{{ range . }}
+			<li><a href="{{ "tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>
+			{{ end }}
+		</ul>
+	</aside>
 	{{ end }}
 	<div>
 		{{ .Summary }}
