--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -7,19 +7,20 @@
 			<p>要查看全部文章，请点击右上角“归档”</p>
 			<ul>
 				{{ range first 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
-				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a> <span class="tiny-note">({{ .Date.Format "2006/1/2" }})</span> </li>
+				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a> <span class="tiny-note">({{ .Date.Format "2006/1/2"
+						}})</span> </li>
 				{{ end }}
 			</ul>
 		</div>
 	</div>
 	<div class="col-6">
 		<div>
-			<h3>最受欢迎</h3>
+			<h3>随机文章</h3>
 		</div>
 		<div>
-			<p>希望能给大家带来通俗易懂的内容</p>
-			<ul id="most-views">
-				{{ range first 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
+			<p>请您随便浏览，获取您感兴趣的内容</p>
+			<ul id="rand-pages">
+				{{ range last 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
 				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
 				{{ end }}
 			</ul>
