--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,7 +93,7 @@ article #meta {
   font-size: 0.8rem;
   color: #999;
 }
-article #meta time{
+article #meta time {
   color: #777;
 }
 .tiny-note {
@@ -117,7 +117,7 @@ article h1 a {
   margin: 0;
 }
 
-.mb-4{
+.mb-4 {
   margin-bottom: 1rem;
 }
 
@@ -327,7 +327,7 @@ article #tags .tag-list li a {
 }
 
 #ArtalkPV {
-  color: #4458a3
+  color: #4458a3;
 }
 
 /* table */
@@ -339,12 +339,15 @@ table {
   border: 1px solid #ddd;
 }
 
-th, td {
+th,
+td {
   text-align: left;
   padding: 8px;
 }
 
-tr:nth-child(even){background-color: #f2f2f2}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 
 thead {
   background-color: #445588;
@@ -356,3 +359,7 @@ hr {
   border-top: 1px solid #eee;
 }
 
+#toc {
+  background: #f6faff;
+  padding: 0.5em 1em 1em 1em;
+}
