fix: bullet display error

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <footer>
 	<ul>
 			<li>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></li>
-			<li><a href="{{ .Site.BaseURL }}index.xml" title="残差平方和（误）">RSS</a></li>
-			<li>Email：
+			<li><a href="{{ .Site.BaseURL }}/index.xml" title="残差平方和（误）">RSS</a></li>
+			<li>Email
 				<a href="mailto:less-bug@mail.ry.rs">less-bug@mail.ry.rs</a>
 			</li>
 	</ul>
