feat: area of contri graph

--- a/layouts/partials/blogger-status.html
+++ b/layouts/partials/blogger-status.html
@@ -4,7 +4,7 @@
     </div>
     <div style="margin-right: 1em;">
         <div>
-            <img src="https://github-readme-activity-graph.cyclic.app/graph?username=pluveto&amp;theme=minimal"
+            <img src="https://github-readme-activity-graph.cyclic.app/graph?username=pluveto&theme=minimal&area=true"
                 style="width: 100%;">
         </div>
         <div>
