--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -38,7 +38,7 @@
 								style="height:16px!important;margin-left:3px;vertical-align:text-bottom;"
 								src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img
 								style="height:16px!important;margin-left:3px;vertical-align:text-bottom;"
-								src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
+								src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> except those created with the assistance of AI.</p>
 
 
 				</div>
