--- a/layouts/partials/blogger-status.html
+++ b/layouts/partials/blogger-status.html
@@ -1,12 +1,8 @@
 <div>
     <div>
-        <h3>博主今天摸鱼了吗？</h3>
+        <h3>今天摸鱼了吗？</h3>
     </div>
     <div style="margin-right: 1em;">
-        <div>
-            <img src="https://github-readme-activity-graph.cyclic.app/graph?username=pluveto&theme=minimal&area=true"
-                style="width: 100%;">
-        </div>
         <div>
             <img src="https://ghchart.rshah.org/ff5566/pluveto" alt="Pluveto's Github chart" style="width: 100%;">
         </div>
