--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -6,7 +6,7 @@
 		<div>
 			<p>要查看全部文章，请点击右上角“归档”</p>
 			<ul>
-				{{ range first 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
+				{{ range first 5 (where .Site.RegularPages.ByDate.Reverse "Type" "in" .Site.Params.mainSections) }}
 				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a>
 					<span class="tiny-note">({{ .Date.Format "2006/1/2"}})</span>
 				</li>
