--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -53,6 +53,23 @@
 			{{ template "_internal/artalk.html" . }}
 		</aside>
 		{{ end }}
+		<!-- Giscus -->
+		<script src="https://giscus.app/client.js"
+		data-repo="pluveto/blog-comments"
+		data-repo-id="R_kgDOK2yQtg"
+		data-category="Announcements"
+		data-category-id="DIC_kwDOK2yQts4Cbj5-"
+		data-mapping="pathname"
+		data-strict="0"
+		data-reactions-enabled="1"
+		data-emit-metadata="0"
+		data-input-position="top"
+		data-theme="light_protanopia"
+		data-lang="zh-CN"
+		crossorigin="anonymous"
+		async>
+		</script>
+
 	</article>
 </main>
 {{ partial "post-bottom.html" . }}
