--- a/static/css/style.css
+++ b/static/css/style.css
@@ -274,10 +274,7 @@ pre {
   overflow-x: auto;
 }
 
-table {
-  width: 100%;
-  overflow: scroll;
-}
+
 
 p img {
   max-width: -webkit-fill-available;
@@ -343,28 +340,64 @@ article #tags .tag-list li a {
 
 /* table */
 
+/* Better tables */
 table {
   border-collapse: collapse;
   border-spacing: 0;
-  width: 100%;
-  border: 1px solid #ddd;
+  font-size: 0.9em;
+  /* width: 100%;
+  max-width: 100%; */
+  margin: 0 auto;
+  border: 1px solid black;
+  /* display: block; */
+  overflow-x: auto;
+  /* does not work because element is not block */
+  /* white-space: nowrap; */
+  counter-increment: caption;
+}
+
+/* add bottom border on column table headings  */
+table tr>th[scope="col"] {
+  border-bottom: 1px solid black;
+}
+
+/* add right border on row table headings  */
+table tr>th[scope="row"] {
+  border-right: 1px solid black;
+}
+
+table>tbody>tr:first-child>td,
+table>tbody>tr:first-child>th {
+  border-top: 1px solid black;
+}
+
+table>tbody>tr:last-child>td,
+table>tbody>tr:last-child>th {
+  border-bottom: 1px solid black;
 }
 
 th,
 td {
   text-align: left;
-  padding: 8px;
+  padding: 0.3rem;
+  line-height: 1.1;
+  vertical-align: top;
 }
 
-tr:nth-child(even) {
-  background-color: #f2f2f2;
+/* Table caption */
+caption {
+  text-align: left;
+  font-size: 0.923em;
+  /* border-bottom: 2pt solid #000; */
+  padding: 0 0.25em 0.25em;
+  width: 100%;
+  margin-left: 0;
 }
 
-thead {
-  background-color: #445588;
-  color: white;
+caption::before {
+  content: "Table " counter(caption) ". ";
+  font-weight: bold;
 }
-
 hr {
   border: 0;
   border-top: 1px solid #eee;
@@ -377,7 +410,7 @@ hr {
 }
 
 #post-content p code {
-  background: #ffebeb;
+  /* background: #ffebeb; */
   font-family: "Cascadia Code", "Source Code Pro", consolas, monospace;
   padding: 0 0.3em;
 }
