--- a/layouts/partials/post-bottom.html
+++ b/layouts/partials/post-bottom.html
@@ -19,26 +19,14 @@ padding: 1em 2em 2em 2em;
 	</div>
 	<div class="col-4">
 		<div>
-			<h3>最受欢迎</h3>
-		</div>
-		<div>
-			<p>如果受欢迎，通常因为需求大而供给不足</p>
-			<ul id="most-views">
-				{{ range first 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
-				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-				{{ end }}
-			</ul>
-		</div>
-	</div>
-	<div class="col-4">
-		<div>
 			<h3>随机文章</h3>
 		</div>
 		<div>
 			<p>请您随便浏览，获取您感兴趣的内容</p>
 			<ul id="rand-pages">
-				{{ range last 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
-				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+				{{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
+				{{ range first 5 (shuffle $pages) }}
+					<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
 				{{ end }}
 			</ul>
 		</div>
