--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -10,7 +10,7 @@
 		<p>计算机方面，主要对<u>编译器</u>、<u>文件系统</u>、<u>区块链</u>、<u>分布式系统</u>，以及无所不在的<u>软件架构</u>有兴趣. 学过一点前后端，学过一点 AI
 			. </p>
 		<p>除了计算机，我对历史、数学、物理学、心理学、哲学、音乐等等都很感兴趣，组乐队记得来找我. </p>
-		<p>目前担任自动驾驶工具链工程师，计划转行 Crytpo. </p>
+		<p>目前担任自动驾驶工具链工程师，业余研究密码学. </p>
 		<b>联系方式</b>
 		<p>邮箱：less-bug@mail.ry.rs</p>
 		<p>Github: <a href="https://github.com/pluveto">@pluveto</a></p>
