--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,21 +1,34 @@
+:root {
+  --primary-color: #4458a3;
+  --light-color: #f0f0f0;
+  --light-background: #f6faff;
+  --light-background-darker: #dceafb;
+  --border-color: #999;
+  --base-font-size: 14px;
+  --header-font-size: 1.8rem;
+  --small-font-size: 0.8rem;
+  --base-padding: 1em;
+}
+
 html {
-  font-size: 14px;
+  font-size: var(--base-font-size);
 }
 
 body {
-  font-family: Ubuntu, "Noto Sans SC", "Bitstream Vera Sans", "DejaVu Sans",
-    Tahoma, sans-serif;
+  font-family: Ubuntu, "Noto Sans SC", "Bitstream Vera Sans", "DejaVu Sans", Tahoma, sans-serif;
   padding: 1.5rem;
 }
 
 a {
-  color: #4458a3;
+  /* color: #4458a3; */
+  color: var(--primary-color);
 }
 
 #site-header {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 1px dotted #999;
+  padding-top: var(--base-padding);
+  padding-bottom: var(--base-padding);
+  /* border-bottom: 1px dotted #999; */
+  border-bottom: 1px dotted var(--border-color);
   display: flex;
 }
 
@@ -33,7 +46,8 @@ footer ul {
 
 footer ul li:not(:last-child)::after {
   content: "\2022";
-  color: #999;
+  /* color: #999; */
+  color: var(--border-color);
   margin: 0 0.2rem;
 }
 
@@ -49,7 +63,8 @@ footer ul li {
 }
 
 #site-nav ul li a:hover {
-  background-color: #f0f0f0;
+  /* background-color: #f0f0f0; */
+  background-color: var(--light-color);
 }
 
 .header-logo {
@@ -89,14 +104,15 @@ footer ul li {
 }
 
 .article--summary h1 {
-  font-size: 1rem;
+  font-size: var(--base-padding);
   line-height: 1.5rem;
   margin: 0;
 }
 
 article #meta {
   font-size: 0.8rem;
-  color: #999;
+  /* color: #999; */
+  color: var(--border-color);
 }
 
 article #meta time {
@@ -104,7 +120,7 @@ article #meta time {
 }
 
 .tiny-note {
-  color: #999;
+  color: var(--border-color);
 }
 
 article h1 {
@@ -127,7 +143,7 @@ article h1 a {
 }
 
 .mb-4 {
-  margin-bottom: 1rem;
+  margin-bottom: var(--base-padding);
 }
 
 /* flex */
@@ -152,6 +168,10 @@ article h1 a {
 
 .items-center {
   align-items: center;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .flex-column {
@@ -226,7 +246,7 @@ article h1 a {
 pre {
   font-family: "Source Code Pro", consolas, monospace;
   font-size: 0.9rem;
-  background-color: #f0f0f0;
+  background-color: var(--light-color);
   padding: 1em;
   /* scroll if too long */
   overflow-x: auto;
@@ -238,8 +258,8 @@ code {
 
 blockquote {
   font-style: italic;
-  margin: 1rem 0;
-  padding: 0.1rem 1rem 0.1rem 1rem;
+  margin: var(--base-padding) 0;
+  padding: 0.1rem var(--base-padding) 0.1rem var(--base-padding);
   border-left: 2px solid #445588;
 }
 
@@ -257,11 +277,12 @@ p {
   margin: 1em 0;
 }
 
-.highlight {}
+.highlight {
+}
 
 footer {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: var(--base-padding);
+  padding-bottom: var(--base-padding);
   margin: 0;
 }
 
@@ -273,8 +294,6 @@ pre {
   white-space: pre;
   overflow-x: auto;
 }
-
-
 
 p img {
   max-width: -webkit-fill-available;
@@ -321,7 +340,7 @@ article #tags .tag-label {
 }
 
 article #tags .tag-list li {
-  background-color: #f0f0f0;
+  background-color: var(--light-color);
   display: inline-block;
   margin: 0;
   padding: 0;
@@ -335,7 +354,7 @@ article #tags .tag-list li a {
 }
 
 #ArtalkPV {
-  color: #4458a3;
+  color: var(--primary-color);
 }
 
 /* table */
@@ -366,13 +385,13 @@ table tr>th[scope="row"] {
   border-right: 1px solid black;
 }
 
-table>tbody>tr:first-child>td,
-table>tbody>tr:first-child>th {
+table > tbody > tr:first-child > td,
+table > tbody > tr:first-child > th {
   border-top: 1px solid black;
 }
 
-table>tbody>tr:last-child>td,
-table>tbody>tr:last-child>th {
+table > tbody > tr:last-child > td,
+table > tbody > tr:last-child > th {
   border-bottom: 1px solid black;
 }
 
@@ -398,6 +417,7 @@ caption::before {
   content: "Table " counter(caption) ". ";
   font-weight: bold;
 }
+
 hr {
   border: 0;
   border-top: 1px solid #eee;
@@ -417,7 +437,7 @@ hr {
 
 .expand {
   border: 1px solid #ccc;
-  padding: 1rem;
+  padding: var(--base-padding);
 }
 
 .expand-label {
@@ -427,4 +447,38 @@ hr {
 
 .expand-content {
   margin-top: 0.5rem;
+}
+
+.post-link {
+  display: block;
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+  margin-bottom: 10px;
+  position: relative;
+  padding: var(--base-padding);
+}
+
+.post-link.prev {
+  padding-left: 2em;
+}
+
+.post-link.next {
+  padding-right: 2em;
+}
+
+.post-link.prev::before {
+  content: "\2190"; /* Unicode for left arrow */
+  position: absolute;
+  left: .5em;
+}
+
+.post-link.next::after {
+  content: "\2192"; /* Unicode for right arrow */
+  position: absolute;
+  right: .5em;
+}
+
+.post-link:hover {
+  background-color: var(--light-background);
 }
