equal with post bottom

--- a/layouts/partials/post-bottom.html
+++ b/layouts/partials/post-bottom.html
@@ -1,8 +1,8 @@
 <div class="row" style="
-background: #f6faff;
 padding: 1em 2em 2em 2em;
+margin: 1em 0;
 ">
-	<div class="col-4">
+	<div class="col-6">
 		<div>
 			<h3>最近发布</h3>
 		</div>
@@ -17,7 +17,7 @@ padding: 1em 2em 2em 2em;
 			</ul>
 		</div>
 	</div>
-	<div class="col-4">
+	<div class="col-6">
 		<div>
 			<h3>随机文章</h3>
 		</div>
