--- a/layouts/partials/blogger-status.html
+++ b/layouts/partials/blogger-status.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <h3>今天摸鱼了吗？</h3>
+        <h3>{{ T "common.heatmap" }}</h3>
     </div>
     <div style="margin-right: 1em;">
         <div>
