--- a/layouts/partials/post-bottom.html
+++ b/layouts/partials/post-bottom.html
@@ -1,34 +1,6 @@
-<div class="row" style="
+<div style="
 padding: 1em 2em 2em 2em;
 margin: 1em 0;
 ">
-	<div class="col-6">
-		<div>
-			<h3>最近发布</h3>
-		</div>
-		<div>
-			<p>要查看全部文章，请点击右上角“归档”</p>
-			<ul>
-				{{ range first 5 (where .Site.RegularPages.ByDate.Reverse "Type" "in" .Site.Params.mainSections) }}
-				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a>
-					<span class="tiny-note">({{ .Date.Format "2006/1/2" }})</span>
-				</li>
-				{{ end }}
-			</ul>
-		</div>
-	</div>
-	<div class="col-6">
-		<div>
-			<h3>随机文章</h3>
-		</div>
-		<div>
-			<p>请您随便浏览，获取您感兴趣的内容</p>
-			<ul id="rand-pages">
-				{{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
-				{{ range first 5 (shuffle $pages) }}
-					<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-				{{ end }}
-			</ul>
-		</div>
-	</div>
+	{{ partial "sidebar.html" .}}
 </div>
