--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,14 +1,14 @@
 <div class="row">
 	<div class="col-6">
 		<div>
-			<h3>最近发布</h3>
+			<h3>{{ T "common.recent_posts"}}</h3>
 		</div>
 		<div>
-			<p>要查看全部文章，请点击右上角“归档”</p>
+			<p>{{ T "common.view_all_articles" }}</p>
 			<ul>
 				{{ range first 5 (where .Site.RegularPages.ByDate.Reverse "Type" "in" .Site.Params.mainSections) }}
 				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a>
-					<span class="tiny-note">({{ .Date.Format "2006/1/2"}})</span>
+					<span class="tiny-note">({{ .Date.Format "2006/1/2" }})</span>
 				</li>
 				{{ end }}
 			</ul>
@@ -16,14 +16,14 @@
 	</div>
 	<div class="col-6">
 		<div>
-			<h3>随机文章</h3>
+			<h3>{{ T "common.random_posts" }}</h3>
 		</div>
 		<div>
-			<p>请您随便浏览，获取您感兴趣的内容</p>
+			<p>{{ T "browse_content"}}</p>
 			<ul id="rand-pages">
 				{{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
 				{{ range first 5 (shuffle $pages) }}
-					<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
 				{{ end }}
 			</ul>
 		</div>
