--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -76,7 +76,7 @@
 		data-emit-metadata="0"
 		data-input-position="top"
 		data-theme="light_protanopia"
-		data-lang="zh-CN"
+		data-lang="{{ .Lang }}"
 		crossorigin="anonymous"
 		async>
 		</script>
