--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 	<div class="header-logo">
 		<img src="/logo.png">
 		<div class="header-logo--right">
-			<div class="header-logo--site-subtitle">消灭幺蛾子！</div>
+			<div class="header-logo--site-subtitle">{{ T "common.lessbug"}}</div>
 			<a class="header-logo--site-title" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
 		</div>
 	</div>
@@ -12,7 +12,39 @@
 			{{ range . }}
 			<li><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
 			{{ end }}
+			<li id="language-selector">
+				[<a href="/en">English</a> | <a href="/zh" onclick="changeLanguage('zh', event)">中文</a>]
+			</li>
 		</ul>
 	</nav>
 	{{ end }}
 </header>
+<script>
+function changeLanguage(lang, event) {
+	localStorage.setItem('lang', lang);
+
+}
+
+window.onload = function () {
+
+	const browserLang = (navigator.language || navigator.userLanguage).substr(0, 2)
+	const savedLang = localStorage.getItem('lang');
+
+	if (window.location.pathname !== '/') {
+		return;
+	}
+
+	if(savedLang == 'zh') {
+		return;
+	}
+
+	if (window.location.pathname == '/en') {
+		changeLanguage('en');
+		return;
+	}
+
+	const lang = savedLang || browserLang;
+	changeLanguage(lang)
+	window.location.href = '/' + lang;
+}
+</script>
