--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,8 +5,9 @@
 			<h1>{{ .Title }}</h1>
 		</header>
 		<aside id="meta">
-			Published at <time datetime="{{ .Date.Format " 2006-01-02T15:04:05" }}">{{ .Date.Format "2006/1/2 15:04"}}</time>
-			, <span id="ArtalkPV">...</span> Views
+			Published at <time datetime="{{ .Date.Format " 2006-01-02T15:04:05" }}">
+				{{ .Date.Format "2006/1/2 15:04"}}</time>
+			by <a href="https://github.com/pluveto">Pluveto (Zijing Zhang)</a>
 		</aside>
 		{{ if .Params.toc }}
 		<aside id="toc">
@@ -24,7 +25,7 @@
 				<div class="tag-label">Tags &nbsp;</div>
 				<ul class="tag-list">
 					{{ range . }}
-					<li><a href="{{ "tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>
+					<li><a href="{{ " tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a></li>
 					{{ end }}
 				</ul>
 			</aside>
@@ -37,7 +38,8 @@
 								style="height:16px!important;margin-left:3px;vertical-align:text-bottom;"
 								src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img
 								style="height:16px!important;margin-left:3px;vertical-align:text-bottom;"
-								src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a> except those created with the assistance of AI.</p>
+								src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a>
+						except those created with the assistance of AI.</p>
 
 
 				</div>
@@ -47,10 +49,10 @@
 			{{ if eq .Type "posts" }}
 			{{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
 			{{ if $pages.Prev . }}
-				<a href="{{ .Prev.Permalink }}" class="post-link prev">{{ .Prev.Title | truncate 50 "..." }}</a>
+			<a href="{{ .Prev.Permalink }}" class="post-link prev">{{ .Prev.Title | truncate 50 "..." }}</a>
 			{{ end }}
 			{{ if $pages.Next . }}
-				<a href="{{ .Next.Permalink }}" class="post-link next">{{ .Next.Title | truncate 50 "..." }}</a>
+			<a href="{{ .Next.Permalink }}" class="post-link next">{{ .Next.Title | truncate 50 "..." }}</a>
 			{{ end }}
 			{{ end }}
 		</aside>
@@ -65,24 +67,14 @@
 		</aside>
 		{{ end }}
 		<!-- Giscus -->
-		<script src="https://giscus.app/client.js"
-		data-repo="pluveto/blog-comments"
-		data-repo-id="R_kgDOK2yQtg"
-		data-category="Announcements"
-		data-category-id="DIC_kwDOK2yQts4Cbj5-"
-		data-mapping="pathname"
-		data-strict="0"
-		data-reactions-enabled="1"
-		data-emit-metadata="0"
-		data-input-position="top"
-		data-theme="light_protanopia"
-		data-lang="en"
-		crossorigin="anonymous"
-		async>
-		</script>
+		<script src="https://giscus.app/client.js" data-repo="pluveto/blog-comments" data-repo-id="R_kgDOK2yQtg"
+			data-category="Announcements" data-category-id="DIC_kwDOK2yQts4Cbj5-" data-mapping="pathname"
+			data-strict="0" data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top"
+			data-theme="light_protanopia" data-lang="en" crossorigin="anonymous" async>
+			</script>
 	</article>
 </main>
 {{ if eq .Type "posts" }}
-	{{ partial "post-bottom.html" . }}
+{{ partial "post-bottom.html" . }}
 {{ end }}
 {{ end }}
