--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -56,7 +56,7 @@
 			{{ end }}
 			{{ end }}
 		</aside>
-		{{ with .Site.DisqusShortname }}
+		{{ with .Site.Config.Services.Disqus.Shortname }}
 		<aside>
 			{{ template "_internal/disqus.html" . }}
 		</aside>
